--- a/index.html
+++ b/index.html
@@ -42,27 +42,29 @@
     </div>
     </div>
     <div class="research">
+      <div class="head mobile"><h1>Research</h1></div>
+
       <img src="Files\Assets\research.svg"alt="reaserch-img">
       <div class="matter">
 
-        <div class="head"><h1>Research</h1></div>
+        <div class="head desktop"><h1>Research</h1></div>
 
-       <p><span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
- Ipsum has been the industry's standard dummy text ever since the 1500s, when
- an Lorem Ipsum is simply dummy text of the printing and typesetting industry.
- Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p></span>
+       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+ Ipsum has been the industry's standard dummy text ever since the </p>
      </div>
       </div>
       <div class="Market-analysis">
-      <div class="matter">
-        <div class="head"><h1>Market Analysis</h1></div>
+        <div class="head mobile"><h1>Market Analysis</h1></div>
+        <img class="mobile"src="Files\Assets\market analysis.svg"alt="MarketAnalysis-img">
 
-        <p><span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-  Ipsum has been the industry's standard dummy text ever since the 1500s, when
-  an Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p></span>
+      <div class="matter">
+        <div class="head desktop"><h1>Market Analysis</h1></div>
+
+        <p >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+  Ipsum has been the industry's standard dummy text ever since thes</p>
+
       </div>
-      <img src="Files\Assets\market analysis.svg"alt="MarketAnalysis-img">
+      <img class="desktop" src="Files\Assets\market analysis.svg"alt="MarketAnalysis-img">
       </div>
     <div class="working">
         <div class="head"><h1>How Does It Works</h1></div>
