--- a/index.html
+++ b/index.html
@@ -71,12 +71,31 @@
         <br>
       <div class="info">
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-        Ipsum has been the industry's standard dummy text ever since the 1500s, when
-        an Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+        Ipsum has been the industry's standard dummy text ever since the 1500s</p>
       </div>
       <br>
-      <div class="workinfo">
+      <div class="workinfo-mobile mobile">
+      <div class="sub">
+        <div class="one1"><h2>Concept</h2></div>
+      </div>
+      <div class="sub">
+        <div class="two2"><h2>Budget</h2></div>
+
+      </div>
+      <div class="sub">
+        <div class="three3"><h2>Demonstrate</h2></div>
+
+      </div>
+      <div class="sub">
+        <div class="four4"><h2>Development</h2></div>
+
+      </div>
+      <div class="sub">
+        <div class="five5"><h2>Launch</h2></div>
+
+      </div>
+      </div>
+      <div class="workinfo desktop">
         <div class="subinfo"><div class="one"><h2>Concept</h2>
         </div>
         <div class="para">
@@ -117,7 +136,7 @@ printing and typesetting</p>
         <div class="head"><h1>Our Services</h1></div>
         <br>
       <div class="our-info">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the , when an</p>
       </div>
       <br><br><br>
       <div class="cardbody">
@@ -183,7 +202,7 @@ Ipsum has been the industry's standard</p>
       </div>
       <br>
       <div class="our-info">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting </p>
 
       </div>
       <br>
@@ -212,7 +231,7 @@ Ipsum has been the industry's standard</p>
       </div>
       <br>
       <div class="our-info">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and </p>
 
       </div>
       <br><br>
@@ -271,8 +290,7 @@ Ipsum has been the industry's standard</p>
       </div>
       <br>
       <div class="our-info">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-  Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
+        <p>Lorem Ipsum is simply dummy text of the 1500s, when an</p>
       </div>
       <br><br>
       <div class="testimonials-corousel">
