--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         </div>
 
         <ul class='navbar'>
-          <li><a href="/"><button class="bn29">HOME</button></a></li>
-          <li><a href="/"><button class="bn29">EXPLORE</button></a></li>
-          <li><a href="/"><button class="bn29">SERVICES</button></a></li>
-          <li><a href="/"><button class="bn29">PROTFOLIO</button></a></li>
-          <li><a href="/"><button class="bn29">OUR TEAM</button></a></li>
-          <li><a href="/"><button class="bn29">TESTIMONIALS</button></a></li>
+          <li><a href="#home"><button class="bn29">HOME</button></a></li>
+          <li><a href="#explore"><button class="bn29">EXPLORE</button></a></li>
+          <li><a href="#service"><button class="bn29">SERVICES</button></a></li>
+          <li><a href="#protfolio"><button class="bn29">PROTFOLIO</button></a></li>
+          <li><a href="#team"><button class="bn29">OUR TEAM</button></a></li>
+          <li><a href="#testimonials"><button class="bn29">TESTIMONIALS</button></a></li>
           <button class="button"><span>Contact Us</span></button>
         </ul>
 
@@ -359,9 +359,12 @@ Ipsum has been the industry's standard</p>
         <p>Example@gmail.com</p>
       </div>
       </div>
+      <br class="mobile">
+      <br class="mobile">
+
       <div class="links">
         <div class="header">
-        <h2>Our Links</h2>
+        <h2>Useful Links</h2>
         </div>
         <br>
         <div class="">
@@ -375,6 +378,9 @@ Ipsum has been the industry's standard</p>
           </ul>
         </div>
       </div>
+      <br class="mobile">
+      <br class="mobile">
+
       <div class="end-services">
         <div class="header">
         <h2>Our Services</h2>
