--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Ipsum has been the industry's standard</p>
           <div class="row">
             <div class="column">
               <div class="card">
-                <div class="card-img">
+                <div class="card-img teamimg">
                   <img src="Images/person.jpg" alt="">
                 </div>
                 <div class="header">
@@ -254,7 +254,7 @@ Ipsum has been the industry's standard</p>
 
             <div class="column">
               <div class="card">
-                <div class="card-img">
+                <div class="card-img teamimg">
                   <img src="Images/person.jpg" alt="">
                 </div>
 
@@ -270,7 +270,7 @@ Ipsum has been the industry's standard</p>
 
             <div class="column">
               <div class="card">
-                <div class="card-img">
+                <div class="card-img teamimg">
                   <img src="Images/person.jpg" alt="">
                 </div>
                 <div class="header">
