--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="research">
       <div class="head mobile"><h1>Research</h1></div>
 
-      <img src="Files\Assets\research.svg"alt="reaserch-img">
+      <img src="Files/Assets/research.svg"alt="reaserch-img">
       <div class="matter">
 
         <div class="head desktop"><h1>Research</h1></div>
@@ -55,7 +55,7 @@
       </div>
       <div class="Market-analysis">
         <div class="head mobile"><h1>Market Analysis</h1></div>
-        <img class="mobile"src="Files\Assets\market analysis.svg"alt="MarketAnalysis-img">
+        <img class="mobile"src="Files/Assets/market analysis.svg"alt="MarketAnalysis-img">
 
       <div class="matter">
         <div class="head desktop"><h1>Market Analysis</h1></div>
@@ -64,7 +64,7 @@
   Ipsum has been the industry's standard dummy text ever since thes</p>
 
       </div>
-      <img class="desktop" src="Files\Assets\market analysis.svg"alt="MarketAnalysis-img">
+      <img class="desktop" src="Files/Assets/market analysis.svg"alt="MarketAnalysis-img">
       </div>
     <div class="working">
         <div class="head"><h1>How Does It Works</h1></div>
