--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <title>Gradient</title>
   </head>
   <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
   <body>
     <div class="nav">
         <div class="logo">
              <h1>GRADIENT</h1>
         </div>
-
+        <div class="clear-menu-btn mobile">
+              <input type="checkbox">
+              <span class="top"></span>
+              <span class="middle"></span>
+              <span class="bottom"></span>
+        </div>
         <ul class='navbar'>
           <li><a href="#home"><button class="bn29">HOME</button></a></li>
           <li><a href="#explore"><button class="bn29">EXPLORE</button></a></li>
@@ -21,52 +28,47 @@
           <button class="button"><span>Contact Us</span></button>
         </ul>
 
-        <div class="toggle">
-           <span class="bar"></span>
-           <span class="bar"></span>
-           <span class="bar"></span>
-       </div>
     </div>
-    <div class="intro">
+    <div class="intro" data-aos="fade-up">
       <div class="head"><h1>Hi, We are from Gradient</h1></div>
-    <div class="intro-info">
+    <div class="intro-info" data-aos="fade-up">
       <p>Pellentesque habitant morbi tristique senectus et netus et malesuada
   fames ac turpis egestas. Ut arcu libero, pulvinar non massa sed,
   accumsan scelerisque dui. Morbi purus mauris, vulputate quis felis nec, </p>
     </div>
     <br>
-    <div class="intro-buttons">
+    <div class="intro-buttons" >
       <button type="button" name="button">Start Up</button>
 
       <button type="button" name="button">Bussiness</button>
     </div>
     </div>
-    <div class="research">
-      <div class="head mobile"><h1>Research</h1></div>
+    <div class="research" >
+      <div class="head mobile" data-aos="fade-up"><h1>Research</h1></div>
 
-      <img src="Files/Assets/research.svg"alt="reaserch-img">
+      <img data-aos="fade-up" src="Files/Assets/research.svg"alt="reaserch-img">
       <div class="matter">
 
-        <div class="head desktop"><h1>Research</h1></div>
+        <div class="head desktop" data-aos="fade-left"><h1>Research</h1></div>
 
-       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+       <p data-aos="fade-up">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
  Ipsum has been the industry's standard dummy text ever since the </p>
      </div>
       </div>
       <div class="Market-analysis">
-        <div class="head mobile"><h1>Market Analysis</h1></div>
-        <img class="mobile"src="Files/Assets/market analysis.svg"alt="MarketAnalysis-img">
+        <div class="head mobile" data-aos="fade-up"><h1>Market Analysis</h1></div>
+        <img class="mobile" data-aos="fade-up" src="Files/Assets/market analysis.svg"alt="MarketAnalysis-img">
 
       <div class="matter">
-        <div class="head desktop"><h1>Market Analysis</h1></div>
+        <div class="head desktop" data-aos="fade-right"><h1>Market Analysis</h1></div>
 
-        <p >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+        <p data-aos="fade-up">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
   Ipsum has been the industry's standard dummy text ever since thes</p>
 
       </div>
-      <img class="desktop" src="Files/Assets/market analysis.svg"alt="MarketAnalysis-img">
+      <img class="desktop" data-aos="fade-up" src="Files/Assets/market analysis.svg"alt="MarketAnalysis-img">
       </div>
-    <div class="working">
+    <div class="working" data-aos="fade-up">
         <div class="head"><h1>How Does It Works</h1></div>
         <br>
       <div class="info">
@@ -74,56 +76,57 @@
         Ipsum has been the industry's standard dummy text ever since the 1500s</p>
       </div>
       <br>
-      <div class="workinfo-mobile mobile">
+      <div class="workinfo-mobile mobile"  data-aos="fade-up">
+
       <div class="sub">
-        <div class="one1"><h2>Concept</h2></div>
+        <div class="one1"data-aos="fade-left"><h2>Concept</h2></div>
       </div>
       <div class="sub">
-        <div class="two2"><h2>Budget</h2></div>
+        <div class="two2"data-aos="fade-right"><h2>Budget</h2></div>
 
       </div>
       <div class="sub">
-        <div class="three3"><h2>Demonstrate</h2></div>
+        <div class="three3"data-aos="fade-left"><h2>Demonstrate</h2></div>
 
       </div>
       <div class="sub">
-        <div class="four4"><h2>Development</h2></div>
+        <div class="four4"data-aos="fade-right"><h2>Development</h2></div>
 
       </div>
       <div class="sub">
-        <div class="five5"><h2>Launch</h2></div>
+        <div class="five5"data-aos="fade-left"><h2>Launch</h2></div>
 
       </div>
       </div>
-      <div class="workinfo desktop">
-        <div class="subinfo"><div class="one"><h2>Concept</h2>
+      <div class="workinfo desktop"  data-aos="fade-up">
+        <div class="subinfo"><div class="one" ><h2>Concept</h2>
         </div>
-        <div class="para">
+        <div class="para" data-aos="fade-up">
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div>
       </div>
         <div class="subinfo"><div class="two"><h2>Demonstrate</h2>
-        </div><div class="para">
-          <p>Lorem Ipsum is simply
+        </div><div class="para" data-aos="fade-up">
+          <p >Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
         <div class="subinfo"><div class="three"><h2>Budget</h2>
-        </div><div class="para">
+        </div><div class="para" data-aos="fade-up">
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
         <div class="subinfo"><div class="four"><h2>Development</h2>
-        </div><div class="para">
+        </div><div class="para" data-aos="fade-up">
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
         <div class="subinfo"><div class="five"><h2>Launch</h2>
-        </div><div class="para">
+        </div><div class="para" data-aos="fade-up">
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
@@ -131,7 +134,7 @@ printing and typesetting</p>
       </div>
 
     </div>
-    <div class="services">
+    <div class="services" data-aos="fade-up">
 
         <div class="head"><h1>Our Services</h1></div>
         <br>
@@ -141,7 +144,7 @@ printing and typesetting</p>
       <br><br><br>
       <div class="cardbody">
         <div class="row">
-          <div class="column">
+          <div class="column" data-aos="fade-up">
             <div class="card">
               <div class="card-img">
                 <img src="Images/team.jpg" alt="">
@@ -154,11 +157,11 @@ printing and typesetting industry. Lorem
 Ipsum has been the industry's standard</p>
 <br>
 
-              <button type="button" class="cardbutton">Learn More</button>
+              <button type="button" class="cardbutton"data-aos="fade-up">Learn More</button>
             </div>
           </div>
 
-          <div class="column">
+          <div class="column"data-aos="fade-up">
             <div class="card">
               <div class="card-img">
                 <img src="Images/frontend.jpg" alt="">
@@ -171,12 +174,12 @@ Ipsum has been the industry's standard</p>
 printing and typesetting industry. Lorem
 Ipsum has been the industry's standard</p>
 <br>
-              <button type="button" class="cardbutton">Learn More</button>
+              <button type="button" class="cardbutton"data-aos="fade-up">Learn More</button>
 
             </div>
           </div>
 
-          <div class="column">
+          <div class="column" data-aos="fade-up">
             <div class="card">
               <div class="card-img">
                 <img src="Images/htmlimg.jpg" alt="">
@@ -189,14 +192,14 @@ printing and typesetting industry. Lorem
 Ipsum has been the industry's standard</p>
 <br>
 
-              <button type="button" class="cardbutton">Learn More</button>
+              <button type="button" class="cardbutton"data-aos="fade-up">Learn More</button>
 
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="protfolio">
+    <div class="protfolio" data-aos="fade-up">
       <div class="head">
       <h1>Our Portfolio</h1>
       </div>
@@ -207,7 +210,7 @@ Ipsum has been the industry's standard</p>
       </div>
       <br>
       <div class="protfolio-tabs">
-        <ul class='tabs'>
+        <ul class='tabs'data-aos="fade-up">
           <li><a href="/"><button class="tbtn active">ALL</button></a></li>
           <li><a href="/"><button class="tbtn">UI Design</button></a></li>
           <li><a href="/"><button class="tbtn">Graphic Design</button></a></li>
@@ -216,16 +219,16 @@ Ipsum has been the industry's standard</p>
       </div>
       <br>
       <div class="protfolio-images">
-        <img src="Images/about us.jpg" alt="">
-        <img src="Images/about us.jpg" alt="">
-        <img src="Images/about us.jpg" alt="">
-        <img src="Images/about us.jpg" alt="">
-        <img src="Images/about us.jpg" alt="">
-        <img src="Images/about us.jpg" alt="">
+        <img data-aos="fade-up"src="Images/about us.jpg" alt="">
+        <img data-aos="fade-up"src="Images/about us.jpg" alt="">
+        <img data-aos="fade-up"src="Images/about us.jpg" alt="">
+        <img data-aos="fade-up"src="Images/about us.jpg" alt="">
+        <img data-aos="fade-up"src="Images/about us.jpg" alt="">
+        <img data-aos="fade-up"src="Images/about us.jpg" alt="">
 
       </div>
     </div>
-    <div class="team">
+    <div class="team" data-aos="fade-up">
       <div class="head">
         <h1>Our Team</h1>
       </div>
@@ -238,7 +241,7 @@ Ipsum has been the industry's standard</p>
       <div class="team-cards">
         <div class="cardbody">
           <div class="row">
-            <div class="column">
+            <div class="column" data-aos="fade-up">
               <div class="card">
                 <div class="card-img teamimg">
                   <img src="Images/person.jpg" alt="">
@@ -252,7 +255,7 @@ Ipsum has been the industry's standard</p>
               </div>
             </div>
 
-            <div class="column">
+            <div class="column" data-aos="fade-up">
               <div class="card">
                 <div class="card-img teamimg">
                   <img src="Images/person.jpg" alt="">
@@ -268,7 +271,7 @@ Ipsum has been the industry's standard</p>
               </div>
             </div>
 
-            <div class="column">
+            <div class="column" data-aos="fade-up">
               <div class="card">
                 <div class="card-img teamimg">
                   <img src="Images/person.jpg" alt="">
@@ -284,7 +287,7 @@ Ipsum has been the industry's standard</p>
         </div>
       </div>
     </div>
-    <div class="testimonials">
+    <div class="testimonials" data-aos="fade-up">
       <div class="head">
         <h1>Testimonials</h1>
       </div>
@@ -293,8 +296,20 @@ Ipsum has been the industry's standard</p>
         <p>Lorem Ipsum is simply dummy text of the 1500s, when an</p>
       </div>
       <br><br>
-      <div class="testimonials-corousel">
+      <div class="testimonials-corousel" data-aos="fade-up">
+        <div class="left-arrow">
+          <img style="transform: rotate(180deg); "src="Images/rightArrow.png" alt="">
+        </div>
         <div class="cardbody">
+          <div class="tcard disable">
+            <div class="testimonial-img">
+              <img src="Images/person.jpg" alt="">
+            </div>
+            <div class="info">
+              <p>"Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla."</p>
+
+            </div>
+          </div>
           <div class="tcard active">
             <div class="testimonial-img">
               <img src="Images/person.jpg" alt="">
@@ -304,6 +319,8 @@ Ipsum has been the industry's standard</p>
 
             </div>
           </div>
+
+
           <div class="tcard disable">
             <div class="testimonial-img">
               <img src="Images/person" alt="">
@@ -313,16 +330,10 @@ Ipsum has been the industry's standard</p>
 
             </div>
           </div>
-          <div class="tcard disable">
-            <div class="testimonial-img">
-              <img src="Images/person" alt="">
-            </div>
-            <div class="">
-              <p>Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.</p>
 
-            </div>
-          </div>
-
+        </div>
+        <div class="right-arrow">
+          <img src="Images/rightArrow.png" alt="">
         </div>
         </div>
 
@@ -333,7 +344,7 @@ Ipsum has been the industry's standard</p>
     <br>
     <br>
     <div class="end">
-      <div class="address">
+      <div class="address"data-aos="fade-up">
       <div class="header">
       <h2>Address</h2>
       </div>
@@ -362,7 +373,7 @@ Ipsum has been the industry's standard</p>
       <br class="mobile">
       <br class="mobile">
 
-      <div class="links">
+      <div class="links"data-aos="fade-up">
         <div class="header">
         <h2>Useful Links</h2>
         </div>
@@ -381,7 +392,7 @@ Ipsum has been the industry's standard</p>
       <br class="mobile">
       <br class="mobile">
 
-      <div class="end-services">
+      <div class="end-services"data-aos="fade-up">
         <div class="header">
         <h2>Our Services</h2>
         </div>
@@ -403,5 +414,12 @@ Ipsum has been the industry's standard</p>
         <p>Designed By Gradient</p>
       </div>
     </footer>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      offset: 400,
+      duration: 1000
+    });
+  </script>
   </body>
 </html>
