--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
               <span class="top"></span>
               <span class="middle"></span>
               <span class="bottom"></span>
+              <span class="circle"></span>
         </div>
         <ul class='navbar'>
           <li><a href="#home"><button class="bn29">HOME</button></a></li>
@@ -344,7 +345,7 @@ Ipsum has been the industry's standard</p>
     <br>
     <br>
     <div class="end">
-      <div class="address"data-aos="fade-up">
+      <div class="address">
       <div class="header">
       <h2>Address</h2>
       </div>
@@ -373,7 +374,7 @@ Ipsum has been the industry's standard</p>
       <br class="mobile">
       <br class="mobile">
 
-      <div class="links"data-aos="fade-up">
+      <div class="links">
         <div class="header">
         <h2>Useful Links</h2>
         </div>
@@ -392,7 +393,7 @@ Ipsum has been the industry's standard</p>
       <br class="mobile">
       <br class="mobile">
 
-      <div class="end-services"data-aos="fade-up">
+      <div class="end-services">
         <div class="header">
         <h2>Our Services</h2>
         </div>
