--- a/index.html
+++ b/index.html
@@ -102,32 +102,32 @@
       <div class="workinfo desktop"  data-aos="fade-up">
         <div class="subinfo"><div class="one" ><h2>Concept</h2>
         </div>
-        <div class="para" data-aos="fade-up">
+        <div class="para" >
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div>
       </div>
         <div class="subinfo"><div class="two"><h2>Demonstrate</h2>
-        </div><div class="para" data-aos="fade-up">
+        </div><div class="para" >
           <p >Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
         <div class="subinfo"><div class="three"><h2>Budget</h2>
-        </div><div class="para" data-aos="fade-up">
+        </div><div class="para" >
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
         <div class="subinfo"><div class="four"><h2>Development</h2>
-        </div><div class="para" data-aos="fade-up">
+        </div><div class="para" >
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
         <div class="subinfo"><div class="five"><h2>Launch</h2>
-        </div><div class="para" data-aos="fade-up">
+        </div><div class="para" >
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
