--- a/index.html
+++ b/index.html
@@ -69,65 +69,65 @@
       </div>
       <img class="desktop" data-aos="fade-up" src="Files/Assets/market analysis.svg"alt="MarketAnalysis-img">
       </div>
-    <div class="working" data-aos="fade-up">
-        <div class="head"><h1>How Does It Works</h1></div>
+    <div class="working">
+        <div class="head" data-aos="fade-up"><h1>How Does It Works</h1></div>
         <br>
-      <div class="info">
+      <div class="info" data-aos="fade-up">
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         Ipsum has been the industry's standard dummy text ever since the 1500s</p>
       </div>
       <br>
-      <div class="workinfo-mobile mobile"  data-aos="fade-up">
+      <div class="workinfo-mobile mobile" data-aos="fade-up" >
 
       <div class="sub">
-        <div class="one1"data-aos="fade-left"><h2>Concept</h2></div>
+        <div class="one1"data-aos="fade-up"><h2>Concept</h2></div>
       </div>
       <div class="sub">
-        <div class="two2"data-aos="fade-right"><h2>Budget</h2></div>
-
-      </div>
-      <div class="sub">
-        <div class="three3"data-aos="fade-left"><h2>Demonstrate</h2></div>
+        <div class="two2"data-aos="fade-up"><h2>Budget</h2></div>
 
       </div>
       <div class="sub">
-        <div class="four4"data-aos="fade-right"><h2>Development</h2></div>
+        <div class="three3"data-aos="fade-up"><h2>Demonstrate</h2></div>
 
       </div>
       <div class="sub">
-        <div class="five5"data-aos="fade-left"><h2>Launch</h2></div>
+        <div class="four4"data-aos="fade-up"><h2>Development</h2></div>
+
+      </div>
+      <div class="sub">
+        <div class="five5"data-aos="fade-up"><h2>Launch</h2></div>
 
       </div>
       </div>
-      <div class="workinfo desktop"  data-aos="fade-up">
+      <div class="workinfo desktop" >
         <div class="subinfo"><div class="one" ><h2>Concept</h2>
         </div>
-        <div class="para" >
+        <div class="para" data-aos="fade-up">
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div>
       </div>
         <div class="subinfo"><div class="two"><h2>Demonstrate</h2>
-        </div><div class="para" >
+        </div><div class="para" data-aos="fade-up">
           <p >Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
         <div class="subinfo"><div class="three"><h2>Budget</h2>
-        </div><div class="para" >
+        </div><div class="para" data-aos="fade-up">
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
         <div class="subinfo"><div class="four"><h2>Development</h2>
-        </div><div class="para" >
+        </div><div class="para" data-aos="fade-up">
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
         <div class="subinfo"><div class="five"><h2>Launch</h2>
-        </div><div class="para" >
+        </div><div class="para" data-aos="fade-up">
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
@@ -421,6 +421,7 @@ Ipsum has been the industry's standard</p>
       offset: 400,
       duration: 1000
     });
+
   </script>
   </body>
 </html>
