--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="research" >
       <div class="head mobile" data-aos="fade-up"><h1>Research</h1></div>
 
-      <img data-aos="fade-up" src="Files/Assets/research.svg"alt="reaserch-img">
+      <img data-aos="fade-up" src="Images/research.svg"alt="reaserch-img">
       <div class="matter">
 
         <div class="head desktop" data-aos="fade-left"><h1>Research</h1></div>
@@ -58,7 +58,7 @@
       </div>
       <div class="Market-analysis">
         <div class="head mobile" data-aos="fade-up"><h1>Market Analysis</h1></div>
-        <img class="mobile" data-aos="fade-up" src="Files/Assets/market analysis.svg"alt="MarketAnalysis-img">
+        <img class="mobile" data-aos="fade-up" src="Images/market analysis.svg"alt="MarketAnalysis-img">
 
       <div class="matter">
         <div class="head desktop" data-aos="fade-right"><h1>Market Analysis</h1></div>
@@ -67,7 +67,7 @@
   Ipsum has been the industry's standard dummy text ever since thes</p>
 
       </div>
-      <img class="desktop" data-aos="fade-up" src="Files/Assets/market analysis.svg"alt="MarketAnalysis-img">
+      <img class="desktop" data-aos="fade-up" src="Images/market analysis.svg"alt="MarketAnalysis-img">
       </div>
     <div class="working">
         <div class="head" data-aos="fade-up"><h1>How Does It Works</h1></div>
