--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class='navbar'>
           <li><a href="#home"><button class="bn29">HOME</button></a></li>
           <li><a href="#explore"><button class="bn29">EXPLORE</button></a></li>
-          <li><a href="#service"><button class="bn29">SERVICES</button></a></li>
+          <li><a href="#services"><button class="bn29">SERVICES</button></a></li>
           <li><a href="#protfolio"><button class="bn29">PROTFOLIO</button></a></li>
           <li><a href="#team"><button class="bn29">OUR TEAM</button></a></li>
           <li><a href="#testimonials"><button class="bn29">TESTIMONIALS</button></a></li>
@@ -30,7 +30,7 @@
         </ul>
 
     </div>
-    <div class="intro" data-aos="fade-up">
+    <div id="home" class="intro" data-aos="fade-up">
       <div class="head"><h1>Hi, We are from Gradient</h1></div>
     <div class="intro-info" data-aos="fade-up">
       <p>Pellentesque habitant morbi tristique senectus et netus et malesuada
@@ -44,12 +44,11 @@
       <button type="button" name="button">Bussiness</button>
     </div>
     </div>
-    <div class="research" >
+    <div id="research"class="research" >
       <div class="head mobile" data-aos="fade-up"><h1>Research</h1></div>
-<svg>
 
   <img data-aos="fade-up" src="Images/research.svg"alt="reaserch-img">
-</svg>
+
       <div class="matter">
 
         <div class="head desktop" data-aos="fade-left"><h1>Research</h1></div>
@@ -58,12 +57,11 @@
  Ipsum has been the industry's standard dummy text ever since the </p>
      </div>
       </div>
-      <div class="Market-analysis">
+      <div id="Market-analysis" class="Market-analysis">
         <div class="head mobile" data-aos="fade-up"><h1>Market Analysis</h1></div>
-<svg>
   <img class="mobile" data-aos="fade-up" src="Images/market analysis.svg"alt="MarketAnalysis-img">
 
-</svg>
+
       <div class="matter">
         <div class="head desktop" data-aos="fade-right"><h1>Market Analysis</h1></div>
 
@@ -71,12 +69,12 @@
   Ipsum has been the industry's standard dummy text ever since thes</p>
 
       </div>
-      <svg>
+
 
         <img class="desktop" data-aos="fade-up" src="Images/market analysis.svg"alt="MarketAnalysis-img">
-      </svg>
+
       </div>
-    <div class="working">
+    <div id="working" class="working">
         <div class="head" data-aos="fade-up"><h1>How Does It Works</h1></div>
         <br>
       <div class="info" data-aos="fade-up">
@@ -106,35 +104,35 @@
 
       </div>
       </div>
-      <div class="workinfo desktop" >
-        <div class="subinfo"><div class="one" ><h2>Concept</h2>
+      <div class="workinfo desktop" data-aos="fade-up">
+        <div class="subinfo" data-aos="fade-up"><div class="one" ><h2>Concept</h2>
         </div>
-        <div class="para" data-aos="fade-up">
+        <div class="para" >
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div>
       </div>
-        <div class="subinfo"><div class="two"><h2>Demonstrate</h2>
-        </div><div class="para" data-aos="fade-up">
+        <div class="subinfo" data-aos="fade-up"><div class="two"><h2>Demonstrate</h2>
+        </div><div class="para" >
           <p >Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
-        <div class="subinfo"><div class="three"><h2>Budget</h2>
-        </div><div class="para" data-aos="fade-up">
+        <div class="subinfo" data-aos="fade-up"><div class="three"><h2>Budget</h2>
+        </div><div class="para" >
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
-        <div class="subinfo"><div class="four"><h2>Development</h2>
-        </div><div class="para" data-aos="fade-up">
+        <div class="subinfo" data-aos="fade-up"><div class="four"><h2>Development</h2>
+        </div><div class="para" >
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
         </div></div>
-        <div class="subinfo"><div class="five"><h2>Launch</h2>
-        </div><div class="para" data-aos="fade-up">
+        <div class="subinfo" data-aos="fade-up"><div class="five"><h2>Launch</h2>
+        </div><div class="para" >
           <p>Lorem Ipsum is simply
 dummy text of the
 printing and typesetting</p>
@@ -142,7 +140,7 @@ printing and typesetting</p>
       </div>
 
     </div>
-    <div class="services" data-aos="fade-up">
+    <div id="services"class="services" data-aos="fade-up">
 
         <div class="head"><h1>Our Services</h1></div>
         <br>
@@ -165,7 +163,7 @@ printing and typesetting industry. Lorem
 Ipsum has been the industry's standard</p>
 <br>
 
-              <button type="button" class="cardbutton"data-aos="fade-up">Learn More</button>
+              <button type="button" class="cardbutton">Learn More</button>
             </div>
           </div>
 
@@ -182,7 +180,7 @@ Ipsum has been the industry's standard</p>
 printing and typesetting industry. Lorem
 Ipsum has been the industry's standard</p>
 <br>
-              <button type="button" class="cardbutton"data-aos="fade-up">Learn More</button>
+              <button type="button" class="cardbutton">Learn More</button>
 
             </div>
           </div>
@@ -200,14 +198,14 @@ printing and typesetting industry. Lorem
 Ipsum has been the industry's standard</p>
 <br>
 
-              <button type="button" class="cardbutton"data-aos="fade-up">Learn More</button>
+              <button type="button" class="cardbutton">Learn More</button>
 
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="protfolio" data-aos="fade-up">
+    <div id="protfolio" class="protfolio" data-aos="fade-up">
       <div class="head">
       <h1>Our Portfolio</h1>
       </div>
@@ -236,7 +234,7 @@ Ipsum has been the industry's standard</p>
 
       </div>
     </div>
-    <div class="team" data-aos="fade-up">
+    <div id="team"class="team" data-aos="fade-up">
       <div class="head">
         <h1>Our Team</h1>
       </div>
@@ -295,7 +293,7 @@ Ipsum has been the industry's standard</p>
         </div>
       </div>
     </div>
-    <div class="testimonials" data-aos="fade-up">
+    <div id="testimonials" class="testimonials" data-aos="fade-up">
       <div class="head">
         <h1>Testimonials</h1>
       </div>
@@ -388,12 +386,12 @@ Ipsum has been the industry's standard</p>
         <br>
         <div class="">
           <ul class='end-links'>
-            <li><a href="/"><button class="bn">＞ Home</button></a></li>
-            <li><a href="/"><button class="bn">＞ Explore</button></a></li>
-            <li><a href="/"><button class="bn">＞ Services</button></a></li>
-            <li><a href="/"><button class="bn">＞ Protfolio</button></a></li>
-            <li><a href="/"><button class="bn">＞ Our Team</button></a></li>
-            <li><a href="/"><button class="bn">＞ Testimonials</button></a></li>
+            <li><a href="#home"><button class="bn">＞ Home</button></a></li>
+            <li><a href="#explore"><button class="bn">＞ Explore</button></a></li>
+            <li><a href="#services"><button class="bn">＞ Services</button></a></li>
+            <li><a href="#protfolio"><button class="bn">＞ Protfolio</button></a></li>
+            <li><a href="#team"><button class="bn">＞ Our Team</button></a></li>
+            <li><a href="#testimonials"><button class="bn">＞ Testimonials</button></a></li>
           </ul>
         </div>
       </div>
