--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <nav>
       <ul class="nav__links">
-        <li class="lihome"><a href="#home"><button class="bn29">HOME</button></a></li>
+        <li class="lihome active"><a href="#home"><button class="bn29">HOME</button></a></li>
         <li class="liresearch"><a href="#research"><button class="bn29">EXPLORE</button></a></li>
         <li class="liservices"><a href="#services"><button class="bn29">SERVICES</button></a></li>
         <li class="liprotfolio"><a href="#protfolio"><button class="bn29">PROTFOLIO</button></a></li>
